# iris

./: Cargo.toml  README.md
src/: main.rs  scene.rs  tile.rs
src/bsdf/: specular.rs
src/integrator/: hwss_modified.rs  mod.rs  path_integrator.rs
src/shape/: mod.rs  triangle.rs
src/spectrum/: constant.rs  sample.rs  upsample.rs  wavelength.rs
