[package]
name = "iris"
version = "0.1.0"
authors = ["Original by Matt Taylor", "Modified by Marc Ruble"]
edition = "2018"

[features]
default = []
hwss = []

[profile.dev]
opt-level = 1

[profile.release]
lto = true
debug = true
codegen-units = 1

[dependencies]
num_cpus = "1.13.0"
enum_dispatch = "0.3.5"
sobol_burley = "0.1.0"
minifb = "0.19.2"
png = "0.17.2"
